--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
             <header>
                 <div id="logo">
                     <div align="center">
-                        <a href="C:\Users\ingrid\Desktop\pagina web\index.html"> <img src="log.jpg" width="100" height="80" hspace="40"></a>
+                        <a href="C:\Users\ingrid\Desktop\pagina web\index.html">"> <img src="log.jpg" width="100" height="80" hspace="40"></a>
                     </div>
                 </div>
                 <nav class="menu">
                     <ul>
-                        <li><a href="https://patimotvel18.github.io/viajes/index.html">Inicio</a></li>
-                        <li><a href="https://patimotvel18.github.io/viajes/categorias.html">Categorias</a></li>
+                        <li><a href="C:\Users\ingrid\Desktop\pagina web\index.html">Inicio</a></li>
+                        <li><a href="C:\Users\ingrid\Desktop\pagina web\categorias.html">>Categorias</a></li>
                         <li><a href="C:\Users\ingrid\Desktop\pagina web\conocenos.html">Conocenos</a></li>
                         <li><a href="C:\Users\ingrid\Desktop\pagina web\iniciar sesion.html">Iniciar Sesión</a></li>
                     </ul>
