--- a/categorias.html
+++ b/categorias.html
@@ -11,7 +11,7 @@
         <header>
             <div id="logo">
                 <div align="center">
-                    <a href="viajes\index.html"> <img src="log.jpg" width="100" height="80" hspace="40"></a>
+                    <a href="C:\Users\ingrid\Desktop\pagina web\index.html"> <img src="log.jpg" width="100" height="80" hspace="40"></a>
                 </div>
             </div>
             <nav class="menu">
