--- a/categorias.html
+++ b/categorias.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title></title>
-        <link rel="stylesheet" href="css\categorias.css"></link>
+        <link rel="stylesheet" type="text/css" href="css\categorias.css">
     </head>
 </html>
 <body>
