--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                 </div>
                 <nav class="menu">
                     <ul>
-                        <li><a href="C:\Users\ingrid\Desktop\pagina web\index.html">Inicio</a></li>
-                        <li><a href="C:\Users\ingrid\Desktop\pagina web\categorias.html">>Categorias</a></li>
-                        <li><a href="C:\Users\ingrid\Desktop\pagina web\conocenos.html">Conocenos</a></li>
-                        <li><a href="C:\Users\ingrid\Desktop\pagina web\iniciar sesion.html">Iniciar Sesión</a></li>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="categorias.html">>Categorias</a></li>
+                        <li><a href="conocenos.html">Conocenos</a></li>
+                        <li><a href="iniciar sesion.html">Iniciar Sesión</a></li>
                     </ul>
                 </nav>
             </header>
