--- a/ingresar.html
+++ b/ingresar.html
@@ -10,7 +10,7 @@
             <header>
                 <div id="logo">
                     <div align="center">
-                        <a href="C:\Users\ingrid\Desktop\pagina web\index.html"> <img src="log.jpg" width="100" height="80" hspace="40"></a>
+                        <a href="index.html"> <img src="log.jpg" width="100" height="80" hspace="40"></a>
                     </div>
                 </div>
             </header>
