--- a/iniciar sesion.html
+++ b/iniciar sesion.html
@@ -10,7 +10,7 @@
             <header>
                 <div id="logo">
                     <div align="center">
-                        <a href="C:\Users\ingrid\Desktop\pagina web\index.html"> <img src="log.jpg" width="100" height="80" hspace="40"></a>
+                        <a href="index.html"> <img src="log.jpg" width="100" height="80" hspace="40"></a>
                     </div>
                 </div>
             </header>
@@ -35,7 +35,7 @@
 
                 <input type="button" value="regresar" onClick="history.go(-1)">
 
-                <a href="C:\Users\ingrid\Desktop\pagina web\ingresar.html" ><h2 align="center">Iniciar sesion</h2></a>
+                <a href="ingresar.html" ><h2 align="center">Iniciar sesion</h2></a>
             </form>
     </body>
 </html>
