--- a/categorias.html
+++ b/categorias.html
@@ -5,8 +5,7 @@
         <link rel="stylesheet" type="text/css" href="css\categorias.css">
     </head>
 </html>
-<body>
-    <body bgcolor="#01496d"></body>
+<body bgcolor="#01496d">
     <div id="categorias">
         <header>
             <div id="logo">
