--- a/categorias.html
+++ b/categorias.html
@@ -39,31 +39,31 @@
                 <div class="imagen">
                     <img src="cultura.jpg" alt="">
                     <div class="overlay">
-                        <h2>Cultural<br><a href="C:\Users\ingrid\Desktop\pagina web\cultura.html" >Leer mas</a></h2>
+                        <h2>Cultural<br><a href="cultura.html" >Leer mas</a></h2>
                     </div>
                 </div>
                 <div class="imagen">
                     <img src="natural.jpg" alt="">
                     <div class="overlay">
-                        <h2>Playas<br><a href="C:\Users\ingrid\Desktop\pagina web\natural.html" >Leer mas</a></h2>
+                        <h2>Playas<br><a href="natural.html" >Leer mas</a></h2>
                     </div>
                 </div>
                 <div class="imagen">
                     <img src="aventura.jpg" alt="">
                     <div class="overlay">
-                        <h2>Aventuras<br><a href="C:\Users\ingrid\Desktop\pagina web\aventura.html" >Leer mas</a></h2>
+                        <h2>Aventuras<br><a href="aventura.html" >Leer mas</a></h2>
                     </div>
                 </div>
                 <div class="imagen">
                     <img src="familiar.jpg" alt="">
                     <div class="overlay">
-                        <h2>Familiar<br><a href="C:\Users\ingrid\Desktop\pagina web\familiar.html" >Leer mas</a></h2>
+                        <h2>Familiar<br><a href="familiar.html" >Leer mas</a></h2>
                     </div>
                 </div>
                 <div class="imagen">
                     <img src="oferta.jpg" alt="">
                     <div class="overlay">
-                        <h2>Ofertas<br><a href="C:\Users\ingrid\Desktop\pagina web\ofertas.html" >Leer mas</a></h2>
+                        <h2>Ofertas<br><a href="ofertas.html" >Leer mas</a></h2>
                     </div>
                 </div>
             </div>
