--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <nav class="menu">
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
-                        <li><a href="categorias.html">Categorias</a></li>
+                        <li><a href="categorias.html">Categoriassssss</a></li>
                         <li><a href="conocenos.html">Conocenos</a></li>
                         <li><a href="iniciar sesion.html">Iniciar Sesión</a></li>
                     </ul>
